codepkg/objects/Order_Product__c.object
<CustomObject>
    <fields>
        <fullName>Carrier_Tracking__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Carrier Tracking # (i.e. UPS number)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <description>Used to store number of cases</description>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_Ordered__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Date Ordered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_On_Date__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Delivered On Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dynamic_Quantity_Filled__c</fullName>
        <label>Dynamic Quantity Filled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equivalent_Substitutes_Acceptable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Equivalent Substitutes Acceptable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equivalent_Substitutes__c</fullName>
        <description>Used in Email template</description>
        <formula>IF(Equivalent_Substitutes_Acceptable__c , &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equivalent Substitutes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Donation_Value__c</fullName>
        <label>Estimated Donation Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_time_of_Arrival__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Estimated time of Arrival</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Entity_Warehouse__c</fullName>
        <label>Fulfilment Entity / Warehouse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Filled Locally/Regionally</fullName>
                </value>
                <value>
                    <fullName>Dixon</fullName>
                </value>
                <value>
                    <fullName>CDPH Depot (NEXGEN)</fullName>
                </value>
                <value>
                    <fullName>CDPH West Sacramento (NEXGEN)</fullName>
                </value>
                <value>
                    <fullName>Personnel</fullName>
                </value>
                <value>
                    <fullName>Citrus</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
                <value>
                    <fullName>OES Dixon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Available_Quantity__c</fullName>
        <label>Inventory Available Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <description>Store item code related to order product</description>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mission__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Mission Task #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>Order_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Order_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Order Product</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description_Other__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Description Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ordered_Part_or_Model_Number__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Ordered Part or Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ordered_Size__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Ordered Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Ordered_Total_Cost__c</fullName>
        <formula>Product_Ordered_Total_Quantity__c * Product_Ordered_Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Ordered Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Ordered_Total_Quantity__c</fullName>
        <label>Product Ordered Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Ordered_Unit_Cost__c</fullName>
        <label>Product Ordered Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Received_Part_or_Model_Number__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Received Part or Model Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Received_Size__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Received Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Received_Total_Cost__c</fullName>
        <formula>Product_Received_Total_Quantity__c * Product_Received_Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Received Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Received_Total_Quantity__c</fullName>
        <label>Product Received/BOL Total Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Received_UOM_Other__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Received UOM Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Received_UOM__c</fullName>
        <label>Product Received UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Ounces</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Received_Unit_Cost__c</fullName>
        <label>Product Received Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Products</relationshipLabel>
        <relationshipName>Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Approved__c</fullName>
        <label>Quantity Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Back_Ordered__c</fullName>
        <label>Quantity Back Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Filled__c</fullName>
        <label>Quantity Filled</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substitution_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Substitution Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Quantity__c</fullName>
        <label>Total Actual Quantity</label>
        <summarizedField>Product_Distribution_Plan__c.Actual_Quantity_Distribution__c</summarizedField>
        <summaryForeignKey>Product_Distribution_Plan__c.Order_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Unit_Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Proposed_Quantity__c</fullName>
        <label>Total Proposed Quantity</label>
        <summarizedField>Product_Distribution_Plan__c.Proposed_Quantity_Distribution__c</summarizedField>
        <summaryForeignKey>Product_Distribution_Plan__c.Order_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Tracking#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM_Other__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>UOM Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Ounces</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Updated_Quantity_Requested__c</fullName>
        <label>Updated Quantity Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Warehouse_Info__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Warehouse SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Order Product</label>
    <nameField>
        <displayFormat>OP-{00000000}</displayFormat>
        <label>Order Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OrderProductEditValidation</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISPICKVAL(Order__r.Status__c, &quot;Fulfilled - Closed&quot;),true,false)</errorConditionFormula>
        <errorMessage>You cannot edit the Fulfilled - Closed Order&apos;s Products</errorMessage>
    </validationRules>
</CustomObject>